[package]
name = "swizzle-test"
version = "0.1.0"
authors = ["Dzmitry Malyshau <dmalyshau@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.19"
glow = { version = "0.2", features = ["glutin"] }
